--- a/app/views/admin/edit.html.erb
+++ b/app/views/admin/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2> Modificar anuncio</h2>
 	
 	<fieldset>
@@ -27,4 +28,4 @@
     <%= f.submit 'Modificar' %><br /><br />
   <%end%>		
 	</fieldset>	
-	
+</div>
