--- a/app/views/users/user_options.html.erb
+++ b/app/views/users/user_options.html.erb
@@ -1,5 +1,4 @@
-
-
+<div class="container">
 <h2>DATOS DE LA EMPRESA</h2>
 
 <%= form_for @user , url: {action: "update_user"}, method: :patch do |f| %>
@@ -18,5 +17,5 @@
 <% end %>
 
 <a href="/admin/dashboard">Volver</a>
-
+</div>
 
