--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,3 +1,17 @@
 body {
-  padding-top: 50px;
+  padding-top: 70px;
+  background-color: #F6F6F6
+}
+
+.panel-custom{
+	border-style: solid;
+	margin: 5px;
+	border-radius: 10px; 
+	padding: 5px; 
+	background: white;
+	margin-bottom: 10px;
+}
+
+th{
+	text-align: center
 }
