--- a/app/views/admin/new.html.erb
+++ b/app/views/admin/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2> Añadir anuncio</h2>
 <fieldset>
   <%= form_for @job_opening , url: '/admin', method: :post do |f| %>
@@ -22,4 +23,4 @@
     <%= f.submit 'Crear anuncio' %><br /><br />
   <%end%>	
 </fieldset>	
-	
+</div>
