--- a/app/views/templates/_footer.html.erb
+++ b/app/views/templates/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer-distributed">
+<footer class="footer-distributed" style="margin-top: 30px">
 
 			<div class="footer-right">
 
