--- a/app/views/users/user_options.html.erb
+++ b/app/views/users/user_options.html.erb
@@ -15,5 +15,5 @@
   <%= f.submit 'Modificar' %><br /><br /> 
 <% end %>
 
-<a href="/admin/dashboard">Volver</a>
+<h3><a href="/admin/dashboard">Volver</a></h3>
 
