--- a/app/views/templates/_logged_header.html.erb
+++ b/app/views/templates/_logged_header.html.erb
@@ -2,7 +2,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
   <div id="wellcome_text">
-        Bienvenido <%=current_user.email%></br>
+        Bienvenido</br><%=current_user.email%> 
     <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
   </div>
 
