--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,3 +1,4 @@
+<div>
 <%= form_tag({controller: "public", action: "search"}, method: "get", class:"form-group", style:"text-align:center") do%>
   <div class="col-xs-3">
   	<%= search_field_tag(:search_text, '', placeholder: 'Buscar...',class:"form-control col-sm") %>
@@ -5,10 +6,11 @@
   <div class="col-xs-3"> 
   	<%= select_tag(:search_category, options_for_select(@search_options), class: "form-control col-sm")%>
   </div>
-  <div >
+  <div style = "text-align: left">
   	<%= submit_tag ('Buscar'), class:"btn btn-default"%>
   </div>
 <%end%>
+</div>
 <% 
   @job_openings.each do |job_opening|
 %>
